--- a/public/index.html
+++ b/public/index.html
@@ -764,7 +764,7 @@ text-size-adjust:none;
 
     var changeInt = 0;
 var i=0,j=0;
-var text = ["a product.", "a service.", "a person.", "anything!"];
+var text = ["a product.", "a service.", "a person.", "something!"];
 
 var interval = setInterval(function() {
     $("#rotatingTitle").fadeOut(400, function() {
