--- a/public/index.html
+++ b/public/index.html
@@ -478,8 +478,12 @@ text-size-adjust:none;
                     <h1 class="big_title" style="background: none;font-weight: normal;letter-spacing: 2px;">Find something remarkworthy!</h1>
                     <h3 id="desc" class="small_title" style="font-weight: normal;font-family: quicksand;margin-left:0px;">
 
-                        Credible and emerging social opinions presented as short snippets.
+                        Discover something <span style="color: #000; font-weight: bold">rare</span> and <span style="color: #000; font-weight: bold">authentic</span>.
                     </h3>
+                    <h3 id="desc" class="small_title" style="font-weight: normal;font-family: quicksand;margin-left:0px;margin-top:0px;">
+                    A hygienic restaurant, an offbeat place, a worthwhile purchase and more.
+                    </h3>
+
                     <h3 class="small_title" style="font-weight: normal;font-family: quicksand;margin-left:6px;">
                     
                     </h3>
@@ -542,18 +546,25 @@ text-size-adjust:none;
     <div class="img-table">
         <div class="img-div" style="text-align: left">
            <br> <div><span class="img-title" style="line-height: 30px">What's an epigram?</span></div>
-            <br><div style="line-height: 22px;">An epigram is a <span style="color:#000;font-weight:bold">short positive sentiment</span> about <span id="rotatingTitle">a product.</span><br><br>
+            <br><div style="line-height: 22px;">An epigram is a <span style="color: #000; font-weight: bold;">short positive sentiment</span> remarking a worthwhile experience.<br><br>
 
 
         </div>
 
     </div>
 
+        <div class="img-table" style="margin-top: -56px;">
+            <div class="img-div" style="text-align: left">
+                <br> <div><span class="img-title" style="line-height: 30px">Recent epigrams</span></div>
+                <br><div style="padding:20px"><img id="rotatingTitle" style="height:88px" src="./img/epigrameg1.png"/></div>
+
+            </div>
+
         <div class="img-table" style="margin-top:-40px;">
             <div class="img-div" style="text-align: left">
-                <br> <div><span class="img-title" style="line-height: 30px">How's it different?</span></div>
+                <br> <div><span class="img-title" style="line-height: 30px">A leap from reviews/blogs</span></div>
                 <br><div style="line-height: 22px;">Besides being <span style="color:#000;font-weight:bold">short</span>, epigrams are highly <span style="color:#000;font-weight:bold">trustworthy</span>.
-                Behind each epigram is a vetting process involving humans and machines.<br><br>
+                Behind each epigram is a multi-step verification process to eliminate fake opinions.<br><br>
 
                 <br> <div><img style="width: 270px;position:absolute;left: -24px;right:0;margin:auto;" src="img/trust.png"/></div><br><br>
                 <div style="margin-top:190px;">Each epigram is verified closely and screened by editors.
@@ -764,15 +775,15 @@ text-size-adjust:none;
 
     var changeInt = 0;
 var i=0,j=0;
-var text = ["a product.", "a service.", "a person.", "something!"];
+var text = ["./img/epigrameg1.png", "./img/epigrameg2.png", "./img/epigrameg3.png", "./img/epigrameg4.png"];
 
 var interval = setInterval(function() {
     $("#rotatingTitle").fadeOut(400, function() {
-        $(this).text(text[i])
+        $(this).attr('src',text[i]);
     }).fadeIn(400);
     i++;
-    if (i >= text.length-1) {
-        clearInterval(interval);
+    if(i == text.length) {
+        i = 0;
     }
 }, 1400);
 
