--- a/public/index.html
+++ b/public/index.html
@@ -556,7 +556,7 @@ text-size-adjust:none;
         <div class="img-table" style="margin-top: -56px;">
             <div class="img-div" style="text-align: left">
                 <br> <div><span class="img-title" style="line-height: 30px">Recent epigrams</span></div>
-                <br><div style="padding:20px"><img id="rotatingTitle" style="height:88px" src="./img/epigrameg1.png"/></div>
+                <br><div style="padding:20px"><img id="rotatingTitle" src="./img/epigrameg1.png"/></div>
 
             </div>
 
@@ -785,7 +785,7 @@ var interval = setInterval(function() {
     if(i == text.length) {
         i = 0;
     }
-}, 1400);
+}, 2500);
 
 
 
