--- a/public/index.html
+++ b/public/index.html
@@ -567,39 +567,39 @@ text-size-adjust:none;
                 Behind each epigram is a multi-step verification process to eliminate fake opinions.<br><br>
 
                 <br> <div><img style="width: 270px;position:absolute;left: -24px;right:0;margin:auto;" src="img/trust.png"/></div><br><br>
-                <div style="margin-top:190px;">Each epigram is verified closely and screened by editors.
-                Think of them as the nerdy ones who ar hard to convince, except they are AI algos.</div></div>
+                <div style="margin-top:190px;">Each epigram is verified closely and screened by editors.</div></div>
 
                 <br>
             </div>
 
         </div>
 
-        <div class="img-table table-2" style="margin-top: 0px">
+        <div class="img-table table-2" style="margin-top: -30px">
             <div class="img-div">
-                <div><span class="img-title">5-Step Verification Process</span></div>
+                <div><span class="img-title">The trust platform</span></div>
                 <br>
-                <div>Every feedback submitted on twinshade has to go through the rigorous verification process.</div>
+                <div>While epigram relies on user opinions, it also curates and cross-verifies information across multiple sources upholding validity of every opinion. When in doubt, find an epigram.</div>
                 <br>
-                <ul class="veristeps" >
-                    <li><span>Mobile number & name cross-verified</span></li>
-                    <li><span>Has provided date of service use</span></li>
-                    <li><span>Has added proof of service use</span></li>
-                    <li><span>Proof verified and digitally fingerprinted</span></li>
-                    <li><span>Answered cross-validating questions</span></li>
-                </ul>
+                <div style="margin: 0 auto;left: 0;right: 0;width: 330px;">
+                <img class="img-banner" src="./img/cfilters.jpg" style="width:300px" />
+                </div>
             </div>
 
         </div>
 
     <div class="img-table">
         <div class="img-div" style="margin-top:-24px;">
-            <div><span class="img-title">How twinshade helps</span></div>
-            <img class="img-banner" src="./img/criteria.png" style="width:300px" />
+            <div><span class="img-title">Few ways people use epigram </span></div>
+
         </div>
         <div class="img-div">
-            <div><span>Be it to find a trusted insurance policy that customers have actually claimed with or to find a trusted doctor, twinshade is at your disposal.
-                <br><br>Never settle for ordinary again!</span></div>
+            <ul class="veristeps" >
+                <li><span>As a shopping researcher (try “best earphones for jogging”)</span></li>
+                <li><span>To find a genuine doctor (try “best eye doctors near me”)</span></li>
+                <li><span>As a stock market strategist (try “best stock picks in india in 2019”)</span></li>
+                <li><span>To discover new & interesting places in a city (try “offbeat places in Mangalore”)</span></li>
+                <li><span>Many more...</span></li>
+            </ul>
         </div>
     </div>
     
