--- a/public/index.html
+++ b/public/index.html
@@ -576,11 +576,11 @@ text-size-adjust:none;
 
         <div class="img-table table-2" style="margin-top: -30px">
             <div class="img-div">
-                <div><span class="img-title">The trust platform</span></div>
+                <div><span class="img-title">Form opinions based on trust</span></div>
                 <br>
-                <div>While epigram relies on user opinions, it also curates and cross-verifies information across multiple sources upholding validity of every opinion. When in doubt, find an epigram.</div>
+                <div>While epigram relies on user opinions, it also curates and cross-verifies information across multiple sources upholding validity of every opinion. When in doubt, find recommendations on epigram.</div>
                 <br>
-                <div style="margin: 0 auto;left: 0;right: 0;width: 330px;">
+                <div style="margin: 0 auto;left: 0;right: 0;width: 330px;margin-top:-20px;">
                 <img class="img-banner" src="./img/cfilters.jpg" style="width:300px" />
                 </div>
             </div>
@@ -596,7 +596,7 @@ text-size-adjust:none;
             <ul class="veristeps" >
                 <li><span>As a shopping researcher (try “best earphones for jogging”)</span></li>
                 <li><span>To find a genuine doctor (try “best eye doctors near me”)</span></li>
-                <li><span>As a stock market strategist (try “best stock picks in india in 2019”)</span></li>
+                <li><span>As a stock market strategist (try “best stock picks in India in 2019”)</span></li>
                 <li><span>To discover new & interesting places in a city (try “offbeat places in Mangalore”)</span></li>
                 <li><span>Many more...</span></li>
             </ul>
