--- a/public/index.html
+++ b/public/index.html
@@ -593,7 +593,7 @@ text-size-adjust:none;
 
         </div>
         <div class="img-div">
-            <ul class="veristeps" >
+            <ul class="veristeps" style="margin-top: -20px;">
                 <li><span>As a shopping researcher (try “best earphones for jogging”)</span></li>
                 <li><span>To find a genuine doctor (try “best eye doctors near me”)</span></li>
                 <li><span>As a stock market strategist (try “best stock picks in India in 2019”)</span></li>
