--- a/public/index.html
+++ b/public/index.html
@@ -644,7 +644,7 @@ text-size-adjust:none;
                         <div class="form-group">
                             <div class="controls ">
                                 <p style="color: #000; font-size: 9px; text-align: center"></p>
-                                <span>Have something remarkworthy to share?</span><a href="#" style="margin-left: 10px; color:#447fc1; text-decoration: underline">Write an epigram</a>
+                                <span>Have something remarkworthy?</span><a href="#" style="margin-left: 10px; color:#447fc1; text-decoration: underline">Write an epigram</a>
                             </div>
                         </div>
                     </form>
