--- a/public/index.html
+++ b/public/index.html
@@ -610,7 +610,7 @@ text-size-adjust:none;
                 <br><br>
 
 
-                <div class="panel-center mob-only" style="position: fixed;bottom: 0px;background: linear-gradient(180deg, rgba(255, 255, 255, 0.85) 0%, rgb(232, 243, 250) 100%);left: 0px;">
+                <div class="panel-center mob-only" style="position: fixed;bottom: 0px;background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgb(232, 243, 250) 100%);left: 0px;">
                     <h1 class="form_title" style="display: none"></h1>
                     <form onsubmit="checkFields();" action="/search" method="get" class="landing_page" >
 
@@ -644,7 +644,7 @@ text-size-adjust:none;
                         <div class="form-group">
                             <div class="controls ">
                                 <p style="color: #000; font-size: 9px; text-align: center"></p>
-                                <span>Had a remarkworthy experience?</span><a href="#" style="margin-left: 10px; color:#447fc1; text-decoration: underline">Write an epigram</a>
+                                <!--<span>Have something remarkworthy?</span><a href="#" style="margin-left: 10px; color:#447fc1; text-decoration: underline">Write an epigram</a>-->
                             </div>
                         </div>
                     </form>
