--- a/public/index.html
+++ b/public/index.html
@@ -556,7 +556,11 @@ text-size-adjust:none;
         <div class="img-table" style="margin-top: -56px;">
             <div class="img-div" style="text-align: left">
                 <br> <div><span class="img-title" style="line-height: 30px">Recent epigrams</span></div>
-                <br><div style="padding:20px"><img id="rotatingTitle" src="./img/epigrameg1.png"/></div>
+                <br><div style="padding:20px"><img id="rotatingTitle" src="./img/epigrameg1.png"/>
+                <img id="rotatingTitle" src="./img/epigrameg2.png" style="display: none"/>
+                <img id="rotatingTitle" src="./img/epigrameg3.png" style="display: none"/>
+                <img id="rotatingTitle" src="./img/epigrameg4.png" style="display: none"/>
+            </div>
 
             </div>
 
